force-app/main/default/objects/Custom_Product__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Product description</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>