force-app/main/default/objects/Custom_Product__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>Stock Keeping Unit or unique product code</description>
    <label>SKU</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>